environment/prod/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
spec:
  ingressClassName: nginx
  rules:
  - host: app.theboyz.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rails
            port: 
              number: 3000
  - host: app.localhost.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rails
            port: 
              number: 3000
